[package]
name = "github-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
select = "0.6.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
structopt = "0.3.26"
